--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".EventDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/champion" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
